--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.0.0",
+    "@angular/cdk": "^16.0.1",
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
     "@angular/forms": "^16.0.0",
+    "@angular/material": "^16.0.1",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12",
+    "path-browserify": "^1.0.1",
+    "puppeteer": "^20.2.1",
     "rxjs": "~7.8.0",
+    "selenium-webdriver": "^4.9.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -33,6 +40,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "typescript": "~5.0.2"
   }
 }
